ADD_SUBDIRECTORY(Flv)
ADD_SUBDIRECTORY(Pictures)
ADD_SUBDIRECTORY(Mp4)
ADD_SUBDIRECTORY(Matroska)
ADD_SUBDIRECTORY(OpenDml)
ADD_SUBDIRECTORY(MpegPS)
ADD_SUBDIRECTORY(MpegTS)
ADD_SUBDIRECTORY(Asf)
ADD_SUBDIRECTORY(AvsProxy)
ADD_SUBDIRECTORY(Mxf)
IF(MSVC)
    ADD_SUBDIRECTORY(NativeAvisynth)
ELSE(MSVC)	
ENDIF(MSVC)
	ADD_SUBDIRECTORY(VapourSynth)
#

