ADD_SUBDIRECTORY(muxerDummy)
ADD_SUBDIRECTORY(muxerMp4v2)
ADD_SUBDIRECTORY(muxerAvi)
ADD_SUBDIRECTORY(muxerRaw)

ADD_SUBDIRECTORY(muxerFlv)
ADD_SUBDIRECTORY(muxerMp4)
ADD_SUBDIRECTORY(muxerMkv)
ADD_SUBDIRECTORY(muxerffPS)
ADD_SUBDIRECTORY(muxerffTS)
#ADD_SUBDIRECTORY(muxerMplex)
if(FALSE)
endif(FALSE)
