IF(DO_COMMON)
  ADD_SUBDIRECTORY(yv12)
  ADD_SUBDIRECTORY(png)
  ADD_SUBDIRECTORY(jpeg)
  ADD_SUBDIRECTORY(huff)
  ADD_SUBDIRECTORY(ffMpeg4)
  ADD_SUBDIRECTORY(ffMpeg2)
#ADD_SUBDIRECTORY(ffMsMpeg4)
  ADD_SUBDIRECTORY(ffFlv1)
  ADD_SUBDIRECTORY(ffDv)
  ADD_SUBDIRECTORY(null)
  ADD_SUBDIRECTORY(xvid4)
  IF(USE_NVENC)
        ADD_SUBDIRECTORY(ffNvEnc)
        ADD_SUBDIRECTORY(nvEnc)
  ENDIF(USE_NVENC)
  IF(USE_LIBVA)
#    ADD_SUBDIRECTORY(libva)
  ENDIF(USE_LIBVA)
ENDIF(DO_COMMON)
# That one has several UIs...
ADD_SUBDIRECTORY(x264)
ADD_SUBDIRECTORY(x265)
