ADD_SUBDIRECTORY(addBorder)
ADD_SUBDIRECTORY(ass)
ADD_SUBDIRECTORY(blackenBorder)
ADD_SUBDIRECTORY(colorYUV)
ADD_SUBDIRECTORY(crop)
ADD_SUBDIRECTORY(dummy)
ADD_SUBDIRECTORY(fastConvolution)
ADD_SUBDIRECTORY(horizontalFlip)
ADD_SUBDIRECTORY(kernelDeint)
ADD_SUBDIRECTORY(largeMedian)
ADD_SUBDIRECTORY(lavDeint)
ADD_SUBDIRECTORY(logo)
ADD_SUBDIRECTORY(lumaOnly)
ADD_SUBDIRECTORY(mplayerDenoise3D)
ADD_SUBDIRECTORY(printInfo)
ADD_SUBDIRECTORY(resampleFps)
ADD_SUBDIRECTORY(resize)
ADD_SUBDIRECTORY(rotate)
ADD_SUBDIRECTORY(stackField)
ADD_SUBDIRECTORY(swapUV)
ADD_SUBDIRECTORY(yadif)
ADD_SUBDIRECTORY(vdpauFilters)
ADD_SUBDIRECTORY(verticalFlip)
