ADD_SUBDIRECTORY(addBorder)
ADD_SUBDIRECTORY(asharp)
ADD_SUBDIRECTORY(ass)
ADD_SUBDIRECTORY(blackenBorder)
ADD_SUBDIRECTORY(changeFps)
ADD_SUBDIRECTORY(colorYUV)
ADD_SUBDIRECTORY(contrast)
ADD_SUBDIRECTORY(chromaShift)
ADD_SUBDIRECTORY(crop)
ADD_SUBDIRECTORY(decimate)
ADD_SUBDIRECTORY(dgBob)
ADD_SUBDIRECTORY(dummy)
ADD_SUBDIRECTORY(eq2)
ADD_SUBDIRECTORY(fastConvolution)
ADD_SUBDIRECTORY(fields)
ADD_SUBDIRECTORY(fluxSmooth)
ADD_SUBDIRECTORY(horizontalFlip)
ADD_SUBDIRECTORY(hue)
ADD_SUBDIRECTORY(kernelDeint)
ADD_SUBDIRECTORY(largeMedian)
ADD_SUBDIRECTORY(lavDeint)
ADD_SUBDIRECTORY(logo)
ADD_SUBDIRECTORY(lumaOnly)
ADD_SUBDIRECTORY(mplayerDenoise3D)
ADD_SUBDIRECTORY(mplayerDelogo)
ADD_SUBDIRECTORY(mSharpen)
ADD_SUBDIRECTORY(printInfo)
ADD_SUBDIRECTORY(removePlane)
ADD_SUBDIRECTORY(resampleFps)
ADD_SUBDIRECTORY(resize)
ADD_SUBDIRECTORY(rotate)
ADD_SUBDIRECTORY(stackField)
ADD_SUBDIRECTORY(swapUV)
ADD_SUBDIRECTORY(telecide)
ADD_SUBDIRECTORY(yadif)
ADD_SUBDIRECTORY(vdpauFilters)
ADD_SUBDIRECTORY(verticalFlip)
