#ADD_SUBDIRECTORY(glSmooth)
#ADD_SUBDIRECTORY(glYadif)
#ADD_SUBDIRECTORY(sample_fragment)
ADD_SUBDIRECTORY(sample_fragment2)
ADD_SUBDIRECTORY(sample_distort)
ADD_SUBDIRECTORY(glBenchmark)
#ADD_SUBDIRECTORY(sample_vertex)
#ADD_SUBDIRECTORY(glVdpau)
ADD_SUBDIRECTORY(glResize)
ADD_SUBDIRECTORY(glRotate)
ADD_SUBDIRECTORY(glShaderLoader)
